# btc_quant_team

./: .gitignore  ALLOW_SECRETS_GUIDE.md  BACKTEST_QUICKSTART.md  BACKTEST_START.md  BACKTEST_USAGE_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DUAL_DIRECTION_QUICK_REFERENCE.md  DUAL_DIRECTION_TRADING_GUIDE.md  FINAL_SOLUTION.md  GITHUB_PUSH_GUIDE.md  GITHUB_SETUP_GUIDE.md  LEVERAGE_FEATURE_SUMMARY.md  LICENSE  QUICK_FIX.md  README.md  README_BACKTEST.md  SECURITY.md  SIMPLIFICATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_15_IMPLEMENTATION_SUMMARY.md  TASK_17_IMPLEMENTATION_SUMMARY.md  TASK_18_COMPLETION_SUMMARY.md  TASK_21_COMPLETION_SUMMARY.md  TASK_23_COMPLETION_SUMMARY.md  TASK_24_DOCUMENTATION_UPDATE.md  TASK_7_SUMMARY.md  TASK_8_COMPLETION_SUMMARY.md  TESTING_SUMMARY.md  TEST_COMPLETION_REPORT.md  check_repo.py  check_repo_files.py  check_token_permissions.py  debug_backtest.py  fix_github_push.sh  git_push_with_askpass.sh  jest.config.js  package-lock.json  package.json  (+13 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml.backup
.hypothesis/constants/: 0f9b1ec6213b23d1  1650fe845ba4652f  25cdf91c4e3125b7  3a956e7ae3b1c251  3cc06e815f8bf485  49c69f3a7508fd16  4f2b05827dac401b  58cf03023d5f7a20  a37730f4875356b8  a39a07dcca9f6e0e  c30c43660dec6b05  fe3264df81e360e8
backend/: README.md  __init__.py  database.py  indicators.py
backend/backtest/: README.md  TASK1_COMPLETION.md  TASK2_COMPLETION.md  TASK3_3_COMPLETION.md  TASK5_2_COMPLETION.md  TASK6_1_COMPLETION.md  __init__.py  api.py  config.py  engine.py  logger.py  metrics.py  models.py  test_condition_evaluation_properties.py  test_data_integrity_properties.py  test_database_properties.py  test_dual_exit_conditions.py  test_engine.py  test_indicators_properties.py  test_metrics.py  test_metrics_integration.py  test_models.py  test_same_direction_reentry_bugfix.py
config/: backtest.yaml  development.yaml
docs/: ARCHITECTURE.md  BTC_MULTI_TIMEFRAME_TREND_ANALYSIS.md  DATA_INITIALIZER_GUIDE.md  DUAL_DIRECTION_API.md  SUPPORT_RESISTANCE_PHASE1_GUIDE.md  klines_table.sql
examples/: analysis_demo.py  backtest_demo.py  data_integrity_demo.py  quality_demo.py
frameworks/: BTC多时间周期投资框架.md  BTC框架分析报告模板.md  README.md  加密货币多时间框架投资框架.md
logs/: backtest.log.1
profiles/: README.md  加密货币交易日志模板.md  我的交易习惯.md
scripts/: deploy_to_github.sh  refresh_btc_data.sh  setup.sh  setup_cron.sh  view_refresh_log.sh
skills/: README.md
skills/btc-monitor/: SKILL.md
skills/data-quality/: HOURLY_MONITOR_GUIDE.md  (+9 more)
tests/: test_api_dual_direction.py  test_data_integrity.py  test_dual_direction_integration.py  test_indicators.py  test_loadTemplate_function.js  test_task8_integration.py
tools/: README.md
web/: FIBONACCI_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  TASK1_COMPLETION_SUMMARY.md  api.py  backtest.css  backtest.html  backtest.js  dashboard.css  dashboard.html  dashboard.js  index.html  test_datetime.html  test_fibonacci.html  test_form_validation.html  test_integration.html  test_long_entry_conditions.html  test_short_exit_conditions.html  verify_fibonacci.sh
(+148 files in other folders)
